// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WiFi/> Snapshot 2.4 GHz 1`] = `
<form>
  <h3>
    Module 
    1
  </h3>
  <div
    class="form-group row"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="26"
      >
        Enable
      </label>
    </div>
    <div
      class="form-check col-sm-8"
    >
      <input
        id="26"
        type="checkbox"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="35"
    >
      SSID
    </label>
    <div
      class="col-sm-8"
    >
      <input
        class="form-control "
        id="35"
        required=""
        type="text"
        value="TestSSID1"
      />
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="36"
    >
      Password
    </label>
    <div
      class="col-sm-8"
    >
      <input
        class="form-control "
        id="36"
        required=""
        type="password"
        value="TestPass"
      />
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      >
        
        WPA2 pre-shared key, that is required to connect to the network.
    
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="37"
      >
        Hide SSID
      </label>
    </div>
    <div
      class="form-check col-sm-8"
    >
      <input
        id="37"
        type="checkbox"
      />
      <small
        class="form-text text-muted"
      >
        If set, network is not visible when scanning for available networks.
      </small>
    </div>
  </div>
  <div
    class="form-group row"
    id="38"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="38"
      >
        GHz
      </label>
    </div>
    <div
      class="col-sm-8"
    >
      <div
        class="form-check form-check-inline"
      >
        <input
          class="form-check-input"
          id="hwmode-0-0"
          name="hwmode-0"
          type="radio"
          value="11g"
        />
        <label
          class="form-check-label"
          for="hwmode-0-0"
        >
          2.4
        </label>
      </div>
      <div
        class="form-check form-check-inline"
      >
        <input
          checked=""
          class="form-check-input"
          id="hwmode-0-1"
          name="hwmode-0"
          type="radio"
          value="11a"
        />
        <label
          class="form-check-label"
          for="hwmode-0-1"
        >
          5
        </label>
      </div>
      <small
        class="form-text text-muted"
      >
        
        The 2.4 GHz band is more widely supported by clients, but tends to have more interference. The 5 GHz band is a
        newer standard and may not be supported by all your devices. It usually has less interference, but the signal
        does not carry so well indoors.
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="39"
    >
      802.11n/ac mode
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="39"
      >
        <option
          value="NOHT"
        >
          Disabled
        </option>
        <option
          value="HT20"
        >
          802.11n - 20 MHz wide channel
        </option>
        <option
          value="HT40"
        >
          802.11n - 40 MHz wide channel
        </option>
        <option
          value="VHT20"
        >
          802.11ac - 20 MHz wide channel
        </option>
        <option
          value="VHT40"
        >
          802.11ac - 40 MHz wide channel
        </option>
        <option
          value="VHT80"
        >
          802.11ac - 80 MHz wide channel
        </option>
      </select>
      <small
        class="form-text text-muted"
      >
        
        Change this to adjust 802.11n/ac mode of operation. 802.11n with 40 MHz wide channels can yield higher
        throughput but can cause more interference in the network. If you don't know what to choose, use the default
        option with 20 MHz wide channel.
    
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="40"
    >
      Channel
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="40"
      >
        <option
          value="0"
        >
          auto
        </option>
        <option
          value="1"
        >
          
                        1
                        (2412 MHz )
                    
        </option>
        <option
          value="2"
        >
          
                        2
                        (2417 MHz )
                    
        </option>
        <option
          value="3"
        >
          
                        3
                        (2422 MHz )
                    
        </option>
        <option
          value="4"
        >
          
                        4
                        (2427 MHz )
                    
        </option>
        <option
          value="5"
        >
          
                        5
                        (2432 MHz )
                    
        </option>
        <option
          value="6"
        >
          
                        6
                        (2437 MHz )
                    
        </option>
        <option
          value="7"
        >
          
                        7
                        (2442 MHz )
                    
        </option>
        <option
          value="8"
        >
          
                        8
                        (2447 MHz )
                    
        </option>
        <option
          value="9"
        >
          
                        9
                        (2452 MHz )
                    
        </option>
        <option
          value="10"
        >
          
                        10
                        (2457 MHz )
                    
        </option>
        <option
          value="11"
        >
          
                        11
                        (2462 MHz )
                    
        </option>
      </select>
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <div
    class="form-group row"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="41"
      >
        Enable Guest Wifi
      </label>
    </div>
    <div
      class="form-check col-sm-8"
    >
      <input
        id="41"
        type="checkbox"
      />
      <small
        class="form-text text-muted"
      >
        
        Enables Wi-Fi for guests, which is separated from LAN network. Devices connected to this network are allowed to
        access the internet, but aren't allowed to access other devices and the configuration interface of the router.
        Parameters of the guest network can be set in the Guest network tab.
        
      </small>
    </div>
  </div>
  <h3>
    Module 
    2
  </h3>
  <div
    class="form-group row"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="27"
      >
        Enable
      </label>
    </div>
    <div
      class="form-check col-sm-8"
    >
      <input
        id="27"
        type="checkbox"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <button
    class="btn btn-primary offset-lg-8 col-lg-3 col-sm-12"
  >
     
     
    Save
  </button>
</form>
`;

exports[`<WiFi/> Snapshot both modules disabled. 1`] = `
<form>
  <h3>
    Module 
    1
  </h3>
  <div
    class="form-group row"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="1"
      >
        Enable
      </label>
    </div>
    <div
      class="form-check col-sm-8"
    >
      <input
        id="1"
        type="checkbox"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <h3>
    Module 
    2
  </h3>
  <div
    class="form-group row"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="2"
      >
        Enable
      </label>
    </div>
    <div
      class="form-check col-sm-8"
    >
      <input
        id="2"
        type="checkbox"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <button
    class="btn btn-primary offset-lg-8 col-lg-3 col-sm-12"
  >
     
     
    Save
  </button>
</form>
`;

exports[`<WiFi/> Snapshot guest network. 1`] = `
<form>
  <h3>
    Module 
    1
  </h3>
  <div
    class="form-group row"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="52"
      >
        Enable
      </label>
    </div>
    <div
      class="form-check col-sm-8"
    >
      <input
        id="52"
        type="checkbox"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="61"
    >
      SSID
    </label>
    <div
      class="col-sm-8"
    >
      <input
        class="form-control "
        id="61"
        required=""
        type="text"
        value="TestSSID1"
      />
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="62"
    >
      Password
    </label>
    <div
      class="col-sm-8"
    >
      <input
        class="form-control "
        id="62"
        required=""
        type="password"
        value="TestPass"
      />
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      >
        
        WPA2 pre-shared key, that is required to connect to the network.
    
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="63"
      >
        Hide SSID
      </label>
    </div>
    <div
      class="form-check col-sm-8"
    >
      <input
        id="63"
        type="checkbox"
      />
      <small
        class="form-text text-muted"
      >
        If set, network is not visible when scanning for available networks.
      </small>
    </div>
  </div>
  <div
    class="form-group row"
    id="64"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="64"
      >
        GHz
      </label>
    </div>
    <div
      class="col-sm-8"
    >
      <div
        class="form-check form-check-inline"
      >
        <input
          class="form-check-input"
          id="hwmode-0-0"
          name="hwmode-0"
          type="radio"
          value="11g"
        />
        <label
          class="form-check-label"
          for="hwmode-0-0"
        >
          2.4
        </label>
      </div>
      <div
        class="form-check form-check-inline"
      >
        <input
          checked=""
          class="form-check-input"
          id="hwmode-0-1"
          name="hwmode-0"
          type="radio"
          value="11a"
        />
        <label
          class="form-check-label"
          for="hwmode-0-1"
        >
          5
        </label>
      </div>
      <small
        class="form-text text-muted"
      >
        
        The 2.4 GHz band is more widely supported by clients, but tends to have more interference. The 5 GHz band is a
        newer standard and may not be supported by all your devices. It usually has less interference, but the signal
        does not carry so well indoors.
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="65"
    >
      802.11n/ac mode
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="65"
      >
        <option
          value="NOHT"
        >
          Disabled
        </option>
        <option
          value="HT20"
        >
          802.11n - 20 MHz wide channel
        </option>
        <option
          value="HT40"
        >
          802.11n - 40 MHz wide channel
        </option>
        <option
          value="VHT20"
        >
          802.11ac - 20 MHz wide channel
        </option>
        <option
          value="VHT40"
        >
          802.11ac - 40 MHz wide channel
        </option>
        <option
          value="VHT80"
        >
          802.11ac - 80 MHz wide channel
        </option>
      </select>
      <small
        class="form-text text-muted"
      >
        
        Change this to adjust 802.11n/ac mode of operation. 802.11n with 40 MHz wide channels can yield higher
        throughput but can cause more interference in the network. If you don't know what to choose, use the default
        option with 20 MHz wide channel.
    
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="66"
    >
      Channel
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="66"
      >
        <option
          value="0"
        >
          auto
        </option>
        <option
          value="36"
        >
          
                        36
                        (5180 MHz )
                    
        </option>
        <option
          value="40"
        >
          
                        40
                        (5200 MHz )
                    
        </option>
        <option
          value="44"
        >
          
                        44
                        (5220 MHz )
                    
        </option>
        <option
          value="48"
        >
          
                        48
                        (5240 MHz )
                    
        </option>
        <option
          value="52"
        >
          
                        52
                        (5260 MHz  ,DFS)
                    
        </option>
        <option
          value="56"
        >
          
                        56
                        (5280 MHz  ,DFS)
                    
        </option>
        <option
          value="60"
        >
          
                        60
                        (5300 MHz  ,DFS)
                    
        </option>
        <option
          value="64"
        >
          
                        64
                        (5320 MHz  ,DFS)
                    
        </option>
        <option
          value="100"
        >
          
                        100
                        (5500 MHz  ,DFS)
                    
        </option>
        <option
          value="104"
        >
          
                        104
                        (5520 MHz  ,DFS)
                    
        </option>
        <option
          value="108"
        >
          
                        108
                        (5540 MHz  ,DFS)
                    
        </option>
        <option
          value="112"
        >
          
                        112
                        (5560 MHz  ,DFS)
                    
        </option>
        <option
          value="116"
        >
          
                        116
                        (5580 MHz  ,DFS)
                    
        </option>
        <option
          value="120"
        >
          
                        120
                        (5600 MHz  ,DFS)
                    
        </option>
        <option
          value="124"
        >
          
                        124
                        (5620 MHz  ,DFS)
                    
        </option>
        <option
          value="128"
        >
          
                        128
                        (5640 MHz  ,DFS)
                    
        </option>
        <option
          value="132"
        >
          
                        132
                        (5660 MHz  ,DFS)
                    
        </option>
        <option
          value="136"
        >
          
                        136
                        (5680 MHz  ,DFS)
                    
        </option>
        <option
          value="140"
        >
          
                        140
                        (5700 MHz  ,DFS)
                    
        </option>
        <option
          value="144"
        >
          
                        144
                        (5720 MHz  ,DFS)
                    
        </option>
        <option
          value="149"
        >
          
                        149
                        (5745 MHz )
                    
        </option>
        <option
          value="153"
        >
          
                        153
                        (5765 MHz )
                    
        </option>
        <option
          value="157"
        >
          
                        157
                        (5785 MHz )
                    
        </option>
        <option
          value="161"
        >
          
                        161
                        (5805 MHz )
                    
        </option>
        <option
          value="165"
        >
          
                        165
                        (5825 MHz )
                    
        </option>
      </select>
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <div
    class="form-group row"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="67"
      >
        Enable Guest Wifi
      </label>
    </div>
    <div
      class="form-check col-sm-8"
    >
      <input
        id="67"
        type="checkbox"
      />
      <small
        class="form-text text-muted"
      >
        
        Enables Wi-Fi for guests, which is separated from LAN network. Devices connected to this network are allowed to
        access the internet, but aren't allowed to access other devices and the configuration interface of the router.
        Parameters of the guest network can be set in the Guest network tab.
        
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="77"
    >
      SSID
    </label>
    <div
      class="col-sm-8"
    >
      <input
        class="form-control "
        id="77"
        type="text"
        value="TestGuestSSID"
      />
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="78"
    >
      Password
    </label>
    <div
      class="col-sm-8"
    >
      <input
        class="form-control is-invalid"
        id="78"
        required=""
        type="password"
        value=""
      />
      <div
        class="invalid-feedback"
      >
        Password must contain at least 8 symbols
      </div>
      <small
        class="form-text text-muted"
      >
        
        WPA2 pre-shared key, that is required to connect to the network.
    
      </small>
    </div>
  </div>
  <h3>
    Module 
    2
  </h3>
  <div
    class="form-group row"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="53"
      >
        Enable
      </label>
    </div>
    <div
      class="form-check col-sm-8"
    >
      <input
        id="53"
        type="checkbox"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <button
    class="btn btn-primary offset-lg-8 col-lg-3 col-sm-12"
    disabled=""
  >
     
     
    Save
  </button>
</form>
`;

exports[`<WiFi/> Snapshot one module enabled. 1`] = `
<form>
  <h3>
    Module 
    1
  </h3>
  <div
    class="form-group row"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="9"
      >
        Enable
      </label>
    </div>
    <div
      class="form-check col-sm-8"
    >
      <input
        id="9"
        type="checkbox"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="18"
    >
      SSID
    </label>
    <div
      class="col-sm-8"
    >
      <input
        class="form-control "
        id="18"
        required=""
        type="text"
        value="TestSSID1"
      />
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="19"
    >
      Password
    </label>
    <div
      class="col-sm-8"
    >
      <input
        class="form-control "
        id="19"
        required=""
        type="password"
        value="TestPass"
      />
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      >
        
        WPA2 pre-shared key, that is required to connect to the network.
    
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="20"
      >
        Hide SSID
      </label>
    </div>
    <div
      class="form-check col-sm-8"
    >
      <input
        id="20"
        type="checkbox"
      />
      <small
        class="form-text text-muted"
      >
        If set, network is not visible when scanning for available networks.
      </small>
    </div>
  </div>
  <div
    class="form-group row"
    id="21"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="21"
      >
        GHz
      </label>
    </div>
    <div
      class="col-sm-8"
    >
      <div
        class="form-check form-check-inline"
      >
        <input
          class="form-check-input"
          id="hwmode-0-0"
          name="hwmode-0"
          type="radio"
          value="11g"
        />
        <label
          class="form-check-label"
          for="hwmode-0-0"
        >
          2.4
        </label>
      </div>
      <div
        class="form-check form-check-inline"
      >
        <input
          checked=""
          class="form-check-input"
          id="hwmode-0-1"
          name="hwmode-0"
          type="radio"
          value="11a"
        />
        <label
          class="form-check-label"
          for="hwmode-0-1"
        >
          5
        </label>
      </div>
      <small
        class="form-text text-muted"
      >
        
        The 2.4 GHz band is more widely supported by clients, but tends to have more interference. The 5 GHz band is a
        newer standard and may not be supported by all your devices. It usually has less interference, but the signal
        does not carry so well indoors.
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="22"
    >
      802.11n/ac mode
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="22"
      >
        <option
          value="NOHT"
        >
          Disabled
        </option>
        <option
          value="HT20"
        >
          802.11n - 20 MHz wide channel
        </option>
        <option
          value="HT40"
        >
          802.11n - 40 MHz wide channel
        </option>
        <option
          value="VHT20"
        >
          802.11ac - 20 MHz wide channel
        </option>
        <option
          value="VHT40"
        >
          802.11ac - 40 MHz wide channel
        </option>
        <option
          value="VHT80"
        >
          802.11ac - 80 MHz wide channel
        </option>
      </select>
      <small
        class="form-text text-muted"
      >
        
        Change this to adjust 802.11n/ac mode of operation. 802.11n with 40 MHz wide channels can yield higher
        throughput but can cause more interference in the network. If you don't know what to choose, use the default
        option with 20 MHz wide channel.
    
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="23"
    >
      Channel
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="23"
      >
        <option
          value="0"
        >
          auto
        </option>
        <option
          value="36"
        >
          
                        36
                        (5180 MHz )
                    
        </option>
        <option
          value="40"
        >
          
                        40
                        (5200 MHz )
                    
        </option>
        <option
          value="44"
        >
          
                        44
                        (5220 MHz )
                    
        </option>
        <option
          value="48"
        >
          
                        48
                        (5240 MHz )
                    
        </option>
        <option
          value="52"
        >
          
                        52
                        (5260 MHz  ,DFS)
                    
        </option>
        <option
          value="56"
        >
          
                        56
                        (5280 MHz  ,DFS)
                    
        </option>
        <option
          value="60"
        >
          
                        60
                        (5300 MHz  ,DFS)
                    
        </option>
        <option
          value="64"
        >
          
                        64
                        (5320 MHz  ,DFS)
                    
        </option>
        <option
          value="100"
        >
          
                        100
                        (5500 MHz  ,DFS)
                    
        </option>
        <option
          value="104"
        >
          
                        104
                        (5520 MHz  ,DFS)
                    
        </option>
        <option
          value="108"
        >
          
                        108
                        (5540 MHz  ,DFS)
                    
        </option>
        <option
          value="112"
        >
          
                        112
                        (5560 MHz  ,DFS)
                    
        </option>
        <option
          value="116"
        >
          
                        116
                        (5580 MHz  ,DFS)
                    
        </option>
        <option
          value="120"
        >
          
                        120
                        (5600 MHz  ,DFS)
                    
        </option>
        <option
          value="124"
        >
          
                        124
                        (5620 MHz  ,DFS)
                    
        </option>
        <option
          value="128"
        >
          
                        128
                        (5640 MHz  ,DFS)
                    
        </option>
        <option
          value="132"
        >
          
                        132
                        (5660 MHz  ,DFS)
                    
        </option>
        <option
          value="136"
        >
          
                        136
                        (5680 MHz  ,DFS)
                    
        </option>
        <option
          value="140"
        >
          
                        140
                        (5700 MHz  ,DFS)
                    
        </option>
        <option
          value="144"
        >
          
                        144
                        (5720 MHz  ,DFS)
                    
        </option>
        <option
          value="149"
        >
          
                        149
                        (5745 MHz )
                    
        </option>
        <option
          value="153"
        >
          
                        153
                        (5765 MHz )
                    
        </option>
        <option
          value="157"
        >
          
                        157
                        (5785 MHz )
                    
        </option>
        <option
          value="161"
        >
          
                        161
                        (5805 MHz )
                    
        </option>
        <option
          value="165"
        >
          
                        165
                        (5825 MHz )
                    
        </option>
      </select>
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <div
    class="form-group row"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="24"
      >
        Enable Guest Wifi
      </label>
    </div>
    <div
      class="form-check col-sm-8"
    >
      <input
        id="24"
        type="checkbox"
      />
      <small
        class="form-text text-muted"
      >
        
        Enables Wi-Fi for guests, which is separated from LAN network. Devices connected to this network are allowed to
        access the internet, but aren't allowed to access other devices and the configuration interface of the router.
        Parameters of the guest network can be set in the Guest network tab.
        
      </small>
    </div>
  </div>
  <h3>
    Module 
    2
  </h3>
  <div
    class="form-group row"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="10"
      >
        Enable
      </label>
    </div>
    <div
      class="form-check col-sm-8"
    >
      <input
        id="10"
        type="checkbox"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <button
    class="btn btn-primary offset-lg-8 col-lg-3 col-sm-12"
  >
     
     
    Save
  </button>
</form>
`;
